// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DAGNode renders HelloWorld component inside the default slot 1`] = `
<div class="vd__node" style="transform: scale(1);">
  <div class="vd__node__link vd__node__link--top"></div>
  <div class="vd__node__link vd__node__link--right"></div>
  <div class="vd__node__link vd__node__link--left"></div>
  <div class="vd__node__link vd__node__link--bottom"></div>
  <div>
    <h1>Hello </h1>
  </div>
</div>
`;

exports[`DAGNode renders correctly 1`] = `
<div class="vd__node" style="transform: scale(1);">
  <div class="vd__node__link vd__node__link--top"></div>
  <div class="vd__node__link vd__node__link--right"></div>
  <div class="vd__node__link vd__node__link--left"></div>
  <div class="vd__node__link vd__node__link--bottom"></div>
  <div class="vd__node__default-content">
    Empty node
  </div>
</div>
`;
